# CT-ITMO-HOMEWORK

./: .gitignore  README.md
ADS/Lab/: 1B.cpp  1C.cpp  1H.cpp  2A.cpp  4I.cpp  CMakeLists.txt
ADS/homework1/: 15.cpp  hw1.aux  hw1.tex
ADS/homework2/: 24.h  36.h  heap.h
ArchIBM/: README.md
ArchIBM/LAB2/: CPU.sv  testbench.sv
ArchIBM/LAB4/: hard.cpp  otsuMethod.hpp  readData.cpp
Architecture/: README.md
Architecture/LAB1/: counter.circ  lsfr.circ
Architecture/LAB2/: cache.py  constants.sv
Architecture/LAB3/: rv3.java
Architecture/LAB4/: image.cpp  writeData.cpp
Architercture/omp4/: data_dynamic.xlsx  data_guided_dynamic_static.xlsx  histogram.h  otsu.h  output.pgm  utility.h  Лабораторная работа №4.docx
Arhitecture/: MyCounter.circ  counter.circ  lfsr.circ
Arhitecture/Lab2/: 123.sv  (+18 more)
Arhitecture/Lab3/: CMakeLists.txt  ElfParser.cpp  ElfParser.h  command_parser.cpp  command_parser.h  main.cpp  output.txt  symtable_parser.cpp  symtable_parser.h  test.c
Arhitecture/Lab3/parser/: CommandParser.cpp  CommandParser.h  ElfParser.cpp  ElfParser.h  SymtableParser.cpp
Arhitecture/Lab3/tests/: sample.elf  test_c.elf
Arhitecture/Lab3/utility/: FileReader.h  FileWriter.h  Section.h  SymtableElement.h  SymtableParser.h  Utility.h  file_reader.hpp  file_writer.hpp  riscv_command.h  symtable_element.h
Arhitecture/Lab4/OneThreadHard/: CMakeLists.txt  FileWriter.h  Histogram.cpp  Histogram.h  Image.cpp  Image.h  Otsu.cpp  Otsu.h  Utility.h  baboon.ascii.pgm  executeTest.py  feep.pgm  hard.cpp  histogram.py  image.pnm  main.cpp  output.pgm  output.pnm  output.txt
Arhitecture/omp4/: CMakeLists.txt  data_static_dynamic_static.xlsx
DigitalCulture/: .gitignore  2.py  3.bat  5.py  grep
MathLog/: A.hs  B.hs  README.MD
OS-LITE/: README.md
paradigms/: ArrayQueueTester.java  Queues.java  RunJs.cmd  expression.clj  expression.pl  expression_tmp.pl  functionalExpression.js  linear.clj  objectExpression.js  oldObjectExpression.js  old_linear.clj  primes.pl  primes_tmp.pl  queueRun.sh  runClojureExpression.sh  runClojureLinear.sh  runObjectClojure.sh  runObjectExpression.sh  runParserExpression.sh  runPrologExpression.sh  runPrologPrimes.sh  runPrologTree.sh  tree-map.pl
(+760 files in other folders)
